package core.domain.credit_card

case class CreditCardNumber(v: String)
